--- a/CottageOfSweets_ver4/res/layout/activity_main.xml
+++ b/CottageOfSweets_ver4/res/layout/activity_main.xml
@@ -2,51 +2,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#ffffff"
+    android:background="@drawable/mainmenu_bg_redtexture_02"
     android:orientation="vertical" >
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="320dp"
-        android:layout_height="320dp"
+        android:layout_width="fill_parent"
+        android:layout_height="525px"
         android:layout_alignLeft="@+id/imageView2"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="58dp"
+        android:layout_marginTop="219px"
         android:src="@drawable/cos_logo_bg" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="320dp"
-        android:layout_height="320dp"
+        android:layout_width="fill_parent"
+        android:layout_height="525px"
         android:layout_alignTop="@+id/imageView1"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/cos_logo_frame" />
-
-    <Button
-        android:id="@+id/btnStart"
-        android:layout_width="270dp"
-        android:layout_height="50dp"
-        android:layout_alignLeft="@+id/btnExit"
-        android:layout_below="@+id/imageView1"
-        android:layout_marginTop="42dp"
-        android:background="#DB5C65"
-        android:onClick="onClickStart"
-        android:text="START"
-        android:textSize="22dp"
-        android:textColor="#ffffff" />
-
-    <Button
-        android:id="@+id/btnExit"
-        android:layout_width="270dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/btnStart"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
-        android:background="#C2A593"
-        android:onClick="onClickExit"
-        android:text="EXIT"
-        android:textSize="22dp"
-        android:textColor="#ffffff" />
+        android:src="@drawable/cos_logo_front" />
 
     <ToggleButton
         android:id="@+id/muteButton"
@@ -59,5 +33,35 @@
         android:background="#D8D8D8"
         android:checked="true"
         android:text="MUTE" />
+
+    <Button
+        android:id="@+id/btnExit"
+        android:layout_width="351px"
+        android:layout_height="83px"
+        android:layout_alignLeft="@+id/btnHowtoPlay"
+        android:layout_below="@+id/btnHowtoPlay"
+        android:layout_marginTop="13dp"
+        android:background="@drawable/btn_exit"
+        android:onClick="onClickExit" />
+
+    <Button
+        android:id="@+id/btnStart"
+        android:layout_width="351px"
+        android:layout_height="83px"
+        android:layout_below="@+id/imageView1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/btn_startgame"
+        android:onClick="onClickStart" />
+
+    <Button
+        android:id="@+id/btnHowtoPlay"
+        android:layout_width="351px"
+        android:layout_height="83px"
+        android:layout_alignLeft="@+id/btnStart"
+        android:layout_below="@+id/btnStart"
+        android:layout_marginTop="14dp"
+        android:background="@drawable/btn_howtoplay"
+        android:onClick="onClickHowtoPlay" />
 
 </RelativeLayout>
